terraform/vpc.tf
resource "aws_vpc" "main_vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = "${merge(map("Name" , "main_vpc"),var.tags)}"
}

# Internet Gateway
resource "aws_internet_gateway" "main_igw" {
  vpc_id = "${aws_vpc.main_vpc.id}"

  tags = "${merge(map("Name" , "main_igw"),var.tags)}"
}

# Subnets -- public and private
resource "aws_subnet" "main_public_subnet" {
  vpc_id                  = "${aws_vpc.main_vpc.id}"
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true

  tags = "${merge(map("Name" , "main_public_subnet"),var.tags)}"
}

resource "aws_subnet" "main_private_subnet" {
  vpc_id                  = "${aws_vpc.main_vpc.id}"
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = true

  tags = "${merge(map("Name" , "main_private_subnet"),var.tags)}"
}
