terraform/acl.tf

resource "aws_network_acl" "main_network_acl" {
  vpc_id     = "${aws_vpc.main_vpc.id}"
  subnet_ids = [
    "${aws_subnet.main_public_subnet.id}", 
    "${aws_subnet.main_private_subnet-a.id}", 
    "${aws_subnet.main_private_subnet-b.id}"
    ]

  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 22
    to_port    = 22
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 80
    to_port    = 80
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 300
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 443
    to_port    = 443
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 400
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 32768
    to_port    = 65535
  }

  ingress {
    protocol   = "-1"
    rule_no    = 500
    action     = "allow"
    cidr_block = "${aws_vpc.main_vpc.cidr_block}"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags = "${merge(map("Name" , "main_network_acl"),var.tags)}"
}
